@@ -54,6 +54,10 @@ Other Changes:
 - Menus:
   - Fixed MenuItem() label position and BeginMenu() arrow/icon/popup positions,
     when used inside a line with a baseline offset.
+- Tables:
+  - Fixed an issue where a very thin scrolling table would advance parent layout
+    slightly differently depending on its visibility (caused by a mismatch
+    between hard minimum window size and table minimum size).
 - Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
   noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]
 - Backends:
